--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,15 +44,8 @@
     "            new_list.append(resolve(v, ctx))\n",
     "        return new_list\n",
     "    else:\n",
-    "        return val\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        return val\n",
+    "\n",
     "def match(a:dict,b:dict):\n",
     "    keys = set(a.keys()) & set(b.keys())\n",
     "    return [a[k]==b[k] for k in keys].count(False) == 0\n",
@@ -68,11 +61,35 @@
     "    res = response.json()\n",
     "\n",
     "    if match(res, expect):\n",
-    "        print(\"---------- passed \", url, f' res:{res}')\n",
     "        ctx |= res\n",
     "        ctx |= resolve(ts['ctx'], ctx)\n",
+    "        return True, url\n",
     "    else:\n",
-    "        print(\"********** failed \", url, f' res:{res} != ', f\"{expect}\")"
+    "        return False, f\"{url} ressult:{res} != {expect}\"\n",
+    "\n",
+    "def red(s): return f\"\\033[91m {s}\\033[00m\"\n",
+    "def green(s): return f\"\\033[92m {s}\\033[00m\"\n",
+    "def yello(s): return f\"\\033[93m {s}\\033[00m\"\n",
+    "def purple(s): return f\"\\033[95m {s}\\033[00m\"\n",
+    "def cyan(s): return f\"\\033[96m {s}\\033[00m\"\n",
+    "\n",
+    "def print_result(idx, passed, info):\n",
+    "    if passed:\n",
+    "        print(green(f\"------ passed {'%5d' % idx}, {info}\"))\n",
+    "    else:\n",
+    "        print(red(f\"!!!!!! failed {'%5d' % idx}, {info}\"))\n",
+    "\n",
+    "\n",
+    "def apply_all_tests(tests, ctx):\n",
+    "    idx = 0\n",
+    "    for ts in tests:\n",
+    "        if type(ts) is list:\n",
+    "            for t in ts:\n",
+    "                print_result(idx, *apply_single(t, ctx))\n",
+    "                idx += 1\n",
+    "        else:\n",
+    "            print_result(idx, *apply_single(ts, ctx))\n",
+    "            idx += 1\n"
    ]
   },
   {
@@ -90,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,342 +115,42 @@
     "ctx = {}\n",
     "ctx['host'] = 'http://127.0.0.1:8899'\n",
     "ctx['username'] = f'test_{np.random.randint(0,100000,size=1)}'\n",
+    "ctx['postdata'] = data\n",
     "\n",
     "tests = [\n",
-    "    {'url':'/user/register','method':'post','headers':{},'data':{'username':'$.username','password':'123456'}, 'expect':{'code':'0','msg':None,'data':None},'ctx':{}},\n",
+    "    {'url':'/user/register','method':'post','headers':{},'data':{'username':'$.username','password':'123456'}, 'expect':{'code':'0'},'ctx':{}},\n",
     "    {'url':'/user/login','method':'post','headers':{},'data':{'username':'$.username','password':'123456'}, 'expect':{'code':'0'},'ctx':{'login_token':'$.data.token'}},\n",
-    "    {'url':'/api/v1/entries','method':'post','headers':{'token':'$.login_token'},'data':data, 'expect':{'code':'0'},'ctx':{}},\n",
-    "    {'url':f'/api/v1/entries.json?rr=9999999999999999&count=10','method':'get','headers':{'token':'$.login_token'},'data':{}, 'expect':{'code':'0'},'ctx':{}},\n",
+    "\n",
+    "    [\n",
+    "        {'url':'/api/v1/entries','method':'post','headers':{'token':'$.login_token'},'data':'$.postdata', 'expect':{'code':'0'},'ctx':{}},\n",
+    "        {'url':'/api/v1/entries.json?rr=9999999999999999&count=10','method':'get','headers':{'token':'$.login_token'},'data':{}, 'expect':{'code':'0'},'ctx':{}},\n",
+    "    ]*3\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---------- passed  /user/register  res:{'code': '0', 'msg': None, 'data': None}\n",
-      "---------- passed  /user/login  res:{'code': '0', 'msg': None, 'data': {'token': '92979a1d18558b1e40203378249a9f2c1ec9e14b', 'username': 'test_[37634]', 'nickname': None}}\n",
-      "---------- passed  /api/v1/entries  res:{'code': '0', 'msg': None, 'data': None}\n"
+      "\u001b[91m !!!!!! failed     0, /user/register ressult:{'code': '1002', 'msg': '用户名已存在!!! test_[50829]', 'data': None} != {'code': '0', 'msg': None, 'data': None}\u001b[00m\n",
+      "\u001b[92m ------ passed     1, /user/login\u001b[00m\n",
+      "\u001b[92m ------ passed     2, /api/v1/entries\u001b[00m\n",
+      "\u001b[92m ------ passed     3, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
+      "\u001b[92m ------ passed     4, /api/v1/entries\u001b[00m\n",
+      "\u001b[92m ------ passed     5, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
+      "\u001b[92m ------ passed     6, /api/v1/entries\u001b[00m\n",
+      "\u001b[92m ------ passed     7, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n"
      ]
     }
    ],
    "source": [
-    "for t in tests:\n",
-    "    apply_single(t, ctx)"
+    "apply_all_tests(tests=tests, ctx=ctx)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'id': 181430915275296768,\n",
-       "  'user_id': 185675857577250816,\n",
-       "  'device': 'xDrip-LimiTTer',\n",
-       "  'date': 1608046900100,\n",
-       "  'date_str': '2020-12-15T23:41:40.100+0800',\n",
-       "  'sgv': 162,\n",
-       "  'delta': -0.353,\n",
-       "  'direction': 'Flat',\n",
-       "  'type': 'sgv',\n",
-       "  'filtered': 181647.0452,\n",
-       "  'unfiltered': 181647.0452,\n",
-       "  'rssi': 100,\n",
-       "  'noise': 1,\n",
-       "  'sys_time': '2020-12-15T23:41:40.100+0800',\n",
-       "  'utc_offset': None,\n",
-       "  'slope': None,\n",
-       "  'intercept': None,\n",
-       "  'scale': None,\n",
-       "  'mbg': None,\n",
-       "  'created_time': None},\n",
-       " {'id': 181432173637799936,\n",
-       "  'user_id': 185675857577250816,\n",
-       "  'device': 'xDrip-LimiTTer',\n",
-       "  'date': 1608047200213,\n",
-       "  'date_str': '2020-12-15T23:46:40.213+0800',\n",
-       "  'sgv': 161,\n",
-       "  'delta': -1.292,\n",
-       "  'direction': 'Flat',\n",
-       "  'type': 'sgv',\n",
-       "  'filtered': 180352.92765,\n",
-       "  'unfiltered': 180352.92765,\n",
-       "  'rssi': 100,\n",
-       "  'noise': 1,\n",
-       "  'sys_time': '2020-12-15T23:46:40.213+0800',\n",
-       "  'utc_offset': None,\n",
-       "  'slope': None,\n",
-       "  'intercept': None,\n",
-       "  'scale': None,\n",
-       "  'mbg': None,\n",
-       "  'created_time': None},\n",
-       " {'id': 181433432507813888,\n",
-       "  'user_id': 185675857577250816,\n",
-       "  'device': 'xDrip-LimiTTer',\n",
-       "  'date': 1608047500323,\n",
-       "  'date_str': '2020-12-15T23:51:40.323+0800',\n",
-       "  'sgv': 158,\n",
-       "  'delta': -2.819,\n",
-       "  'direction': 'Flat',\n",
-       "  'type': 'sgv',\n",
-       "  'filtered': 177529.39844999998,\n",
-       "  'unfiltered': 177529.39844999998,\n",
-       "  'rssi': 100,\n",
-       "  'noise': 1,\n",
-       "  'sys_time': '2020-12-15T23:51:40.323+0800',\n",
-       "  'utc_offset': None,\n",
-       "  'slope': None,\n",
-       "  'intercept': None,\n",
-       "  'scale': None,\n",
-       "  'mbg': None,\n",
-       "  'created_time': None},\n",
-       " {'id': 181434689834323968,\n",
-       "  'user_id': 185675857577250816,\n",
-       "  'device': 'xDrip-LimiTTer',\n",
-       "  'date': 1608047800039,\n",
-       "  'date_str': '2020-12-15T23:56:40.039+0800',\n",
-       "  'sgv': 154,\n",
-       "  'delta': -3.529,\n",
-       "  'direction': 'Flat',\n",
-       "  'type': 'sgv',\n",
-       "  'filtered': 173999.98695,\n",
-       "  'unfiltered': 173999.98695,\n",
-       "  'rssi': 100,\n",
-       "  'noise': 1,\n",
-       "  'sys_time': '2020-12-15T23:56:40.039+0800',\n",
-       "  'utc_offset': None,\n",
-       "  'slope': None,\n",
-       "  'intercept': None,\n",
-       "  'scale': None,\n",
-       "  'mbg': None,\n",
-       "  'created_time': None},\n",
-       " {'id': 181435950373670912,\n",
-       "  'user_id': 185675857577250816,\n",
-       "  'device': 'xDrip-LimiTTer',\n",
-       "  'date': 1608048100549,\n",
-       "  'date_str': '2020-12-16T00:01:40.549+0800',\n",
-       "  'sgv': 149,\n",
-       "  'delta': -5.396,\n",
-       "  'direction': 'FortyFiveDown',\n",
-       "  'type': 'sgv',\n",
-       "  'filtered': 168588.22264999998,\n",
-       "  'unfiltered': 168588.22264999998,\n",
-       "  'rssi': 100,\n",
-       "  'noise': 1,\n",
-       "  'sys_time': '2020-12-16T00:01:40.549+0800',\n",
-       "  'utc_offset': None,\n",
-       "  'slope': None,\n",
-       "  'intercept': None,\n",
-       "  'scale': None,\n",
-       "  'mbg': None,\n",
-       "  'created_time': None},\n",
-       " {'id': 181437207310110720,\n",
-       "  'user_id': 185675857577250816,\n",
-       "  'device': 'xDrip-LimiTTer',\n",
-       "  'date': 1608048400262,\n",
-       "  'date_str': '2020-12-16T00:06:40.262+0800',\n",
-       "  'sgv': 143,\n",
-       "  'delta': -5.999,\n",
-       "  'direction': 'FortyFiveDown',\n",
-       "  'type': 'sgv',\n",
-       "  'filtered': 162588.2231,\n",
-       "  'unfiltered': 162588.2231,\n",
-       "  'rssi': 100,\n",
-       "  'noise': 1,\n",
-       "  'sys_time': '2020-12-16T00:06:40.262+0800',\n",
-       "  'utc_offset': None,\n",
-       "  'slope': None,\n",
-       "  'intercept': None,\n",
-       "  'scale': None,\n",
-       "  'mbg': None,\n",
-       "  'created_time': None},\n",
-       " {'id': 181438790496292864,\n",
-       "  'user_id': 185675857577250816,\n",
-       "  'device': 'xDrip-LimiTTer',\n",
-       "  'date': 1608048777553,\n",
-       "  'date_str': '2020-12-16T00:12:57.553+0800',\n",
-       "  'sgv': 136,\n",
-       "  'delta': -5.046,\n",
-       "  'direction': 'FortyFiveDown',\n",
-       "  'type': 'sgv',\n",
-       "  'filtered': 156235.2824,\n",
-       "  'unfiltered': 156235.2824,\n",
-       "  'rssi': 100,\n",
-       "  'noise': 1,\n",
-       "  'sys_time': '2020-12-16T00:12:57.553+0800',\n",
-       "  'utc_offset': None,\n",
-       "  'slope': None,\n",
-       "  'intercept': None,\n",
-       "  'scale': None,\n",
-       "  'mbg': None,\n",
-       "  'created_time': None},\n",
-       " {'id': 181440055494184960,\n",
-       "  'user_id': 185675857577250816,\n",
-       "  'device': 'xDrip-LimiTTer',\n",
-       "  'date': 1608049079193,\n",
-       "  'date_str': '2020-12-16T00:17:59.193+0800',\n",
-       "  'sgv': 133,\n",
-       "  'delta': -3.156,\n",
-       "  'direction': 'Flat',\n",
-       "  'type': 'sgv',\n",
-       "  'filtered': 153058.81204999998,\n",
-       "  'unfiltered': 153058.81204999998,\n",
-       "  'rssi': 100,\n",
-       "  'noise': 1,\n",
-       "  'sys_time': '2020-12-16T00:17:59.193+0800',\n",
-       "  'utc_offset': None,\n",
-       "  'slope': None,\n",
-       "  'intercept': None,\n",
-       "  'scale': None,\n",
-       "  'mbg': None,\n",
-       "  'created_time': None},\n",
-       " {'id': 181441313969934336,\n",
-       "  'user_id': 185675857577250816,\n",
-       "  'device': 'xDrip-LimiTTer',\n",
-       "  'date': 1608049379304,\n",
-       "  'date_str': '2020-12-16T00:22:59.304+0800',\n",
-       "  'sgv': 132,\n",
-       "  'delta': -1.057,\n",
-       "  'direction': 'Flat',\n",
-       "  'type': 'sgv',\n",
-       "  'filtered': 151999.98859999998,\n",
-       "  'unfiltered': 151999.98859999998,\n",
-       "  'rssi': 100,\n",
-       "  'noise': 1,\n",
-       "  'sys_time': '2020-12-16T00:22:59.304+0800',\n",
-       "  'utc_offset': None,\n",
-       "  'slope': None,\n",
-       "  'intercept': None,\n",
-       "  'scale': None,\n",
-       "  'mbg': None,\n",
-       "  'created_time': None},\n",
-       " {'id': 181442571275472896,\n",
-       "  'user_id': 185675857577250816,\n",
-       "  'device': 'xDrip-LimiTTer',\n",
-       "  'date': 1608049679020,\n",
-       "  'date_str': '2020-12-16T00:27:59.020+0800',\n",
-       "  'sgv': 130,\n",
-       "  'delta': -2.235,\n",
-       "  'direction': 'Flat',\n",
-       "  'type': 'sgv',\n",
-       "  'filtered': 149764.69465,\n",
-       "  'unfiltered': 149764.69465,\n",
-       "  'rssi': 100,\n",
-       "  'noise': 1,\n",
-       "  'sys_time': '2020-12-16T00:27:59.020+0800',\n",
-       "  'utc_offset': None,\n",
-       "  'slope': None,\n",
-       "  'intercept': None,\n",
-       "  'scale': None,\n",
-       "  'mbg': None,\n",
-       "  'created_time': None}]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from jsonpath import jsonpath\n",
-    "\n",
-    "def jp(data, path):\n",
-    "    v = jsonpath(data, path)\n",
-    "    if v and type(v) is list:\n",
-    "        return v[0]\n",
-    "    return None\n",
-    "\n",
-    "\n",
-    "def resolve(val, ctx):\n",
-    "    if type(val) is str:\n",
-    "        if val.startswith('$'):\n",
-    "            return jp(ctx, val)\n",
-    "        else:\n",
-    "            return val\n",
-    "    elif type(val) in [int,float,bool]:\n",
-    "        return val\n",
-    "    elif type(val) is dict:\n",
-    "        new_dict = {}\n",
-    "        for k in val:\n",
-    "            new_dict[k] = resolve(val[k], ctx)\n",
-    "        return new_dict\n",
-    "    elif type(val) is list:\n",
-    "        new_list = []\n",
-    "        for v in val:\n",
-    "            new_list.append(resolve(v, ctx))\n",
-    "        return new_list\n",
-    "    else:\n",
-    "        return val\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'data': {'token': 'asdf',\n",
-       "  'exp': 100,\n",
-       "  'list': [{'h': 'lyf'}, {'b': 3}],\n",
-       "  'aa': {'bb': 3, 'cc': 'cc', 'username': 'lyf'}}}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ctx = {'username':'lyf','value': 100}\n",
-    "data = {'data':{'token':'asdf', 'exp':'$.value', 'list':[{'h':'$.username'},{'b':3}], 'aa':{'bb': 3,'cc':'cc','username':'$.username'}}}\n",
-    "resolve(data, ctx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'a': 2, 'c': 'dd', 'b': 2}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = {\"a\":1,\"c\":'dd'}\n",
-    "b = {\"b\":2,\"a\":2}\n",
-    "a | b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
