--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +79,8 @@
     "    else:\n",
     "        print(red(f\"!!!!!! failed {'%5d' % idx}, {info}\"))\n",
     "\n",
+    "def T(url,method='get',headers={},data={},expect={},ctx={}):\n",
+    "    return {'url':url,'method':method,'headers':headers,'data':data, 'expect':expect,'ctx':ctx}\n",
     "\n",
     "def apply_all_tests(tests, ctx):\n",
     "    idx = 0\n",
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,33 +120,32 @@
     "ctx['postdata'] = data\n",
     "\n",
     "tests = [\n",
-    "    {'url':'/user/register','method':'post','headers':{},'data':{'username':'$.username','password':'123456'}, 'expect':{'code':'0'},'ctx':{}},\n",
-    "    {'url':'/user/login','method':'post','headers':{},'data':{'username':'$.username','password':'123456'}, 'expect':{'code':'0'},'ctx':{'login_token':'$.data.token'}},\n",
+    "    T(url='/user/register',method='post',data={'username':'$.username','password':'123456'}, expect={'code':'0'}),\n",
+    "    T(url='/user/login',method='post',data={'username':'$.username','password':'123456'}, expect={'code':'0'},ctx={'login_token':'$.data.token'}),\n",
     "\n",
     "    [\n",
-    "        {'url':'/api/v1/entries','method':'post','headers':{'token':'$.login_token'},'data':'$.postdata', 'expect':{'code':'0'},'ctx':{}},\n",
-    "        {'url':'/api/v1/entries.json?rr=9999999999999999&count=10','method':'get','headers':{'token':'$.login_token'},'data':{}, 'expect':{'code':'0'},'ctx':{}},\n",
-    "    ]*3\n",
+    "        T(url='/api/v1/entries',method='post',headers={'token':'$.login_token'},data='$.postdata', expect={'code':'0'}),\n",
+    "        T(url='/api/v1/entries.json?rr=9999999999999999&count=10',method='get',headers={'token':'$.login_token'},expect={'code':'0'}),\n",
+    "    ]*10\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[91m !!!!!! failed     0, /user/register ressult:{'code': '1002', 'msg': '用户名已存在!!! test_[50829]', 'data': None} != {'code': '0', 'msg': None, 'data': None}\u001b[00m\n",
-      "\u001b[92m ------ passed     1, /user/login\u001b[00m\n",
-      "\u001b[92m ------ passed     2, /api/v1/entries\u001b[00m\n",
-      "\u001b[92m ------ passed     3, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
-      "\u001b[92m ------ passed     4, /api/v1/entries\u001b[00m\n",
-      "\u001b[92m ------ passed     5, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
-      "\u001b[92m ------ passed     6, /api/v1/entries\u001b[00m\n",
-      "\u001b[92m ------ passed     7, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n"
+     "ename": "TypeError",
+     "evalue": "tuple indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/lyf/rs/gluc-cgm/tests/test.ipynb Cell 5'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/lyf/rs/gluc-cgm/tests/test.ipynb#ch0000002?line=0'>1</a>\u001b[0m apply_all_tests(tests\u001b[39m=\u001b[39;49mtests, ctx\u001b[39m=\u001b[39;49mctx)\n",
+      "\u001b[1;32m/Users/lyf/rs/gluc-cgm/tests/test.ipynb Cell 2'\u001b[0m in \u001b[0;36mapply_all_tests\u001b[0;34m(tests, ctx)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lyf/rs/gluc-cgm/tests/test.ipynb#ch0000015?line=70'>71</a>\u001b[0m         idx \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lyf/rs/gluc-cgm/tests/test.ipynb#ch0000015?line=71'>72</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/lyf/rs/gluc-cgm/tests/test.ipynb#ch0000015?line=72'>73</a>\u001b[0m     print_result(idx, \u001b[39m*\u001b[39mapply_single(ts, ctx))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lyf/rs/gluc-cgm/tests/test.ipynb#ch0000015?line=73'>74</a>\u001b[0m     idx \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
+      "\u001b[1;32m/Users/lyf/rs/gluc-cgm/tests/test.ipynb Cell 2'\u001b[0m in \u001b[0;36mapply_single\u001b[0;34m(ts, ctx)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lyf/rs/gluc-cgm/tests/test.ipynb#ch0000015?line=32'>33</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mapply_single\u001b[39m(ts, ctx):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/lyf/rs/gluc-cgm/tests/test.ipynb#ch0000015?line=33'>34</a>\u001b[0m     method \u001b[39m=\u001b[39m resolve(ts[\u001b[39m'\u001b[39;49m\u001b[39mmethod\u001b[39;49m\u001b[39m'\u001b[39;49m], ctx)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lyf/rs/gluc-cgm/tests/test.ipynb#ch0000015?line=34'>35</a>\u001b[0m     url \u001b[39m=\u001b[39m resolve(ts[\u001b[39m'\u001b[39m\u001b[39murl\u001b[39m\u001b[39m'\u001b[39m], ctx)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lyf/rs/gluc-cgm/tests/test.ipynb#ch0000015?line=35'>36</a>\u001b[0m     headers \u001b[39m=\u001b[39m resolve(ts[\u001b[39m'\u001b[39m\u001b[39mheaders\u001b[39m\u001b[39m'\u001b[39m], ctx)\n",
+      "\u001b[0;31mTypeError\u001b[0m: tuple indices must be integers or slices, not str"
      ]
     }
    ],
