--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,20 +132,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "tuple indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/lyf/rs/gluc-cgm/tests/test.ipynb Cell 5'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/lyf/rs/gluc-cgm/tests/test.ipynb#ch0000002?line=0'>1</a>\u001b[0m apply_all_tests(tests\u001b[39m=\u001b[39;49mtests, ctx\u001b[39m=\u001b[39;49mctx)\n",
-      "\u001b[1;32m/Users/lyf/rs/gluc-cgm/tests/test.ipynb Cell 2'\u001b[0m in \u001b[0;36mapply_all_tests\u001b[0;34m(tests, ctx)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lyf/rs/gluc-cgm/tests/test.ipynb#ch0000015?line=70'>71</a>\u001b[0m         idx \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lyf/rs/gluc-cgm/tests/test.ipynb#ch0000015?line=71'>72</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/lyf/rs/gluc-cgm/tests/test.ipynb#ch0000015?line=72'>73</a>\u001b[0m     print_result(idx, \u001b[39m*\u001b[39mapply_single(ts, ctx))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lyf/rs/gluc-cgm/tests/test.ipynb#ch0000015?line=73'>74</a>\u001b[0m     idx \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
-      "\u001b[1;32m/Users/lyf/rs/gluc-cgm/tests/test.ipynb Cell 2'\u001b[0m in \u001b[0;36mapply_single\u001b[0;34m(ts, ctx)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lyf/rs/gluc-cgm/tests/test.ipynb#ch0000015?line=32'>33</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mapply_single\u001b[39m(ts, ctx):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/lyf/rs/gluc-cgm/tests/test.ipynb#ch0000015?line=33'>34</a>\u001b[0m     method \u001b[39m=\u001b[39m resolve(ts[\u001b[39m'\u001b[39;49m\u001b[39mmethod\u001b[39;49m\u001b[39m'\u001b[39;49m], ctx)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lyf/rs/gluc-cgm/tests/test.ipynb#ch0000015?line=34'>35</a>\u001b[0m     url \u001b[39m=\u001b[39m resolve(ts[\u001b[39m'\u001b[39m\u001b[39murl\u001b[39m\u001b[39m'\u001b[39m], ctx)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lyf/rs/gluc-cgm/tests/test.ipynb#ch0000015?line=35'>36</a>\u001b[0m     headers \u001b[39m=\u001b[39m resolve(ts[\u001b[39m'\u001b[39m\u001b[39mheaders\u001b[39m\u001b[39m'\u001b[39m], ctx)\n",
-      "\u001b[0;31mTypeError\u001b[0m: tuple indices must be integers or slices, not str"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[91m !!!!!! failed     0, /user/register ressult:{'code': '1002', 'msg': '用户名已存在!!! test_[70203]', 'data': None} != {'code': '0'}\u001b[00m\n",
+      "\u001b[92m ------ passed     1, /user/login\u001b[00m\n",
+      "\u001b[92m ------ passed     2, /api/v1/entries\u001b[00m\n",
+      "\u001b[92m ------ passed     3, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
+      "\u001b[92m ------ passed     4, /api/v1/entries\u001b[00m\n",
+      "\u001b[92m ------ passed     5, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
+      "\u001b[92m ------ passed     6, /api/v1/entries\u001b[00m\n",
+      "\u001b[92m ------ passed     7, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
+      "\u001b[92m ------ passed     8, /api/v1/entries\u001b[00m\n",
+      "\u001b[92m ------ passed     9, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
+      "\u001b[92m ------ passed    10, /api/v1/entries\u001b[00m\n",
+      "\u001b[92m ------ passed    11, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
+      "\u001b[92m ------ passed    12, /api/v1/entries\u001b[00m\n",
+      "\u001b[92m ------ passed    13, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
+      "\u001b[92m ------ passed    14, /api/v1/entries\u001b[00m\n",
+      "\u001b[92m ------ passed    15, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
+      "\u001b[92m ------ passed    16, /api/v1/entries\u001b[00m\n",
+      "\u001b[92m ------ passed    17, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
+      "\u001b[92m ------ passed    18, /api/v1/entries\u001b[00m\n",
+      "\u001b[92m ------ passed    19, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
+      "\u001b[92m ------ passed    20, /api/v1/entries\u001b[00m\n",
+      "\u001b[92m ------ passed    21, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n"
      ]
     }
    ],
