--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -63,7 +63,7 @@
     "    if match(res, expect):\n",
     "        ctx |= res\n",
     "        ctx |= resolve(ts['ctx'], ctx)\n",
-    "        return True, url\n",
+    "        return True, f\"{url} {res}\"\n",
     "    else:\n",
     "        return False, f\"{url} ressult:{res} != {expect}\"\n",
     "\n",
