--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,9 +96,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'device': 'xDrip-LimiTTer',\n",
+       "  'date': 1608046900100,\n",
+       "  'date_str': '2020-12-15T23:41:40.100+0800',\n",
+       "  'sgv': 162,\n",
+       "  'delta': -0.353,\n",
+       "  'direction': 'Flat',\n",
+       "  'type': 'sgv',\n",
+       "  'filtered': 181647.0452,\n",
+       "  'unfiltered': 181647.0452,\n",
+       "  'rssi': 100,\n",
+       "  'noise': 1,\n",
+       "  'sys_time': '2020-12-15T23:41:40.100+0800',\n",
+       "  'utc_offset': None,\n",
+       "  'slope': None,\n",
+       "  'intercept': None,\n",
+       "  'scale': None,\n",
+       "  'mbg': None,\n",
+       "  'created_time': None},\n",
+       " {'device': 'xDrip-LimiTTer',\n",
+       "  'date': 1608047200213,\n",
+       "  'date_str': '2020-12-15T23:46:40.213+0800',\n",
+       "  'sgv': 161,\n",
+       "  'delta': -1.292,\n",
+       "  'direction': 'Flat',\n",
+       "  'type': 'sgv',\n",
+       "  'filtered': 180352.92765,\n",
+       "  'unfiltered': 180352.92765,\n",
+       "  'rssi': 100,\n",
+       "  'noise': 1,\n",
+       "  'sys_time': '2020-12-15T23:46:40.213+0800',\n",
+       "  'utc_offset': None,\n",
+       "  'slope': None,\n",
+       "  'intercept': None,\n",
+       "  'scale': None,\n",
+       "  'mbg': None,\n",
+       "  'created_time': None},\n",
+       " {'device': 'xDrip-LimiTTer',\n",
+       "  'date': 1608047500323,\n",
+       "  'date_str': '2020-12-15T23:51:40.323+0800',\n",
+       "  'sgv': 158,\n",
+       "  'delta': -2.819,\n",
+       "  'direction': 'Flat',\n",
+       "  'type': 'sgv',\n",
+       "  'filtered': 177529.39844999998,\n",
+       "  'unfiltered': 177529.39844999998,\n",
+       "  'rssi': 100,\n",
+       "  'noise': 1,\n",
+       "  'sys_time': '2020-12-15T23:51:40.323+0800',\n",
+       "  'utc_offset': None,\n",
+       "  'slope': None,\n",
+       "  'intercept': None,\n",
+       "  'scale': None,\n",
+       "  'mbg': None,\n",
+       "  'created_time': None},\n",
+       " {'device': 'xDrip-LimiTTer',\n",
+       "  'date': 1608047800039,\n",
+       "  'date_str': '2020-12-15T23:56:40.039+0800',\n",
+       "  'sgv': 154,\n",
+       "  'delta': -3.529,\n",
+       "  'direction': 'Flat',\n",
+       "  'type': 'sgv',\n",
+       "  'filtered': 173999.98695,\n",
+       "  'unfiltered': 173999.98695,\n",
+       "  'rssi': 100,\n",
+       "  'noise': 1,\n",
+       "  'sys_time': '2020-12-15T23:56:40.039+0800',\n",
+       "  'utc_offset': None,\n",
+       "  'slope': None,\n",
+       "  'intercept': None,\n",
+       "  'scale': None,\n",
+       "  'mbg': None,\n",
+       "  'created_time': None},\n",
+       " {'device': 'xDrip-LimiTTer',\n",
+       "  'date': 1608048100549,\n",
+       "  'date_str': '2020-12-16T00:01:40.549+0800',\n",
+       "  'sgv': 149,\n",
+       "  'delta': -5.396,\n",
+       "  'direction': 'FortyFiveDown',\n",
+       "  'type': 'sgv',\n",
+       "  'filtered': 168588.22264999998,\n",
+       "  'unfiltered': 168588.22264999998,\n",
+       "  'rssi': 100,\n",
+       "  'noise': 1,\n",
+       "  'sys_time': '2020-12-16T00:01:40.549+0800',\n",
+       "  'utc_offset': None,\n",
+       "  'slope': None,\n",
+       "  'intercept': None,\n",
+       "  'scale': None,\n",
+       "  'mbg': None,\n",
+       "  'created_time': None},\n",
+       " {'device': 'xDrip-LimiTTer',\n",
+       "  'date': 1608048400262,\n",
+       "  'date_str': '2020-12-16T00:06:40.262+0800',\n",
+       "  'sgv': 143,\n",
+       "  'delta': -5.999,\n",
+       "  'direction': 'FortyFiveDown',\n",
+       "  'type': 'sgv',\n",
+       "  'filtered': 162588.2231,\n",
+       "  'unfiltered': 162588.2231,\n",
+       "  'rssi': 100,\n",
+       "  'noise': 1,\n",
+       "  'sys_time': '2020-12-16T00:06:40.262+0800',\n",
+       "  'utc_offset': None,\n",
+       "  'slope': None,\n",
+       "  'intercept': None,\n",
+       "  'scale': None,\n",
+       "  'mbg': None,\n",
+       "  'created_time': None},\n",
+       " {'device': 'xDrip-LimiTTer',\n",
+       "  'date': 1608048777553,\n",
+       "  'date_str': '2020-12-16T00:12:57.553+0800',\n",
+       "  'sgv': 136,\n",
+       "  'delta': -5.046,\n",
+       "  'direction': 'FortyFiveDown',\n",
+       "  'type': 'sgv',\n",
+       "  'filtered': 156235.2824,\n",
+       "  'unfiltered': 156235.2824,\n",
+       "  'rssi': 100,\n",
+       "  'noise': 1,\n",
+       "  'sys_time': '2020-12-16T00:12:57.553+0800',\n",
+       "  'utc_offset': None,\n",
+       "  'slope': None,\n",
+       "  'intercept': None,\n",
+       "  'scale': None,\n",
+       "  'mbg': None,\n",
+       "  'created_time': None},\n",
+       " {'device': 'xDrip-LimiTTer',\n",
+       "  'date': 1608049079193,\n",
+       "  'date_str': '2020-12-16T00:17:59.193+0800',\n",
+       "  'sgv': 133,\n",
+       "  'delta': -3.156,\n",
+       "  'direction': 'Flat',\n",
+       "  'type': 'sgv',\n",
+       "  'filtered': 153058.81204999998,\n",
+       "  'unfiltered': 153058.81204999998,\n",
+       "  'rssi': 100,\n",
+       "  'noise': 1,\n",
+       "  'sys_time': '2020-12-16T00:17:59.193+0800',\n",
+       "  'utc_offset': None,\n",
+       "  'slope': None,\n",
+       "  'intercept': None,\n",
+       "  'scale': None,\n",
+       "  'mbg': None,\n",
+       "  'created_time': None},\n",
+       " {'device': 'xDrip-LimiTTer',\n",
+       "  'date': 1608049379304,\n",
+       "  'date_str': '2020-12-16T00:22:59.304+0800',\n",
+       "  'sgv': 132,\n",
+       "  'delta': -1.057,\n",
+       "  'direction': 'Flat',\n",
+       "  'type': 'sgv',\n",
+       "  'filtered': 151999.98859999998,\n",
+       "  'unfiltered': 151999.98859999998,\n",
+       "  'rssi': 100,\n",
+       "  'noise': 1,\n",
+       "  'sys_time': '2020-12-16T00:22:59.304+0800',\n",
+       "  'utc_offset': None,\n",
+       "  'slope': None,\n",
+       "  'intercept': None,\n",
+       "  'scale': None,\n",
+       "  'mbg': None,\n",
+       "  'created_time': None},\n",
+       " {'device': 'xDrip-LimiTTer',\n",
+       "  'date': 1608049679020,\n",
+       "  'date_str': '2020-12-16T00:27:59.020+0800',\n",
+       "  'sgv': 130,\n",
+       "  'delta': -2.235,\n",
+       "  'direction': 'Flat',\n",
+       "  'type': 'sgv',\n",
+       "  'filtered': 149764.69465,\n",
+       "  'unfiltered': 149764.69465,\n",
+       "  'rssi': 100,\n",
+       "  'noise': 1,\n",
+       "  'sys_time': '2020-12-16T00:27:59.020+0800',\n",
+       "  'utc_offset': None,\n",
+       "  'slope': None,\n",
+       "  'intercept': None,\n",
+       "  'scale': None,\n",
+       "  'mbg': None,\n",
+       "  'created_time': None}]"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sqlalchemy\n",
     "\n",
@@ -109,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,41 +322,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "apply_all_tests(tests=tests, ctx=ctx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['$.addr', '$.id', '$.user.name', '$.user.age']"
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "src = 'http://aa.com/home/$.addr/$.id?name=$.user.name&age=$.user.age'\n",
+    "ctx = {'addr':'shanghai','id':33,'user':{'name':'testname','age':33}}\n",
+    "\n",
+    "\n",
+    "matches = re.findall(r'[\\/=](\\$(?:\\.\\w+)*)', src)\n",
+    "matches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[91m !!!!!! failed     0, /user/register ressult:{'code': '1002', 'msg': '用户名已存在!!! test_[70203]', 'data': None} != {'code': '0'}\u001b[00m\n",
-      "\u001b[92m ------ passed     1, /user/login\u001b[00m\n",
-      "\u001b[92m ------ passed     2, /api/v1/entries\u001b[00m\n",
-      "\u001b[92m ------ passed     3, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
-      "\u001b[92m ------ passed     4, /api/v1/entries\u001b[00m\n",
-      "\u001b[92m ------ passed     5, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
-      "\u001b[92m ------ passed     6, /api/v1/entries\u001b[00m\n",
-      "\u001b[92m ------ passed     7, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
-      "\u001b[92m ------ passed     8, /api/v1/entries\u001b[00m\n",
-      "\u001b[92m ------ passed     9, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
-      "\u001b[92m ------ passed    10, /api/v1/entries\u001b[00m\n",
-      "\u001b[92m ------ passed    11, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
-      "\u001b[92m ------ passed    12, /api/v1/entries\u001b[00m\n",
-      "\u001b[92m ------ passed    13, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
-      "\u001b[92m ------ passed    14, /api/v1/entries\u001b[00m\n",
-      "\u001b[92m ------ passed    15, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
-      "\u001b[92m ------ passed    16, /api/v1/entries\u001b[00m\n",
-      "\u001b[92m ------ passed    17, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
-      "\u001b[92m ------ passed    18, /api/v1/entries\u001b[00m\n",
-      "\u001b[92m ------ passed    19, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n",
-      "\u001b[92m ------ passed    20, /api/v1/entries\u001b[00m\n",
-      "\u001b[92m ------ passed    21, /api/v1/entries.json?rr=9999999999999999&count=10\u001b[00m\n"
+      "[]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'asdf'"
+      ]
+     },
+     "execution_count": 273,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "apply_all_tests(tests=tests, ctx=ctx)"
+    "from jsonpath import jsonpath\n",
+    "def jp(data, path, default=None):\n",
+    "    v = jsonpath(data, path)\n",
+    "    if v and type(v) is list:\n",
+    "        return v[0]\n",
+    "    return default\n",
+    "\n",
+    "# replace like /$.aaa.bbb or =$.aa.bb from ctx\n",
+    "def var_replace(src: str, ctx: dict):\n",
+    "    regex = r'(\\$(?:\\.\\w+)*)'\n",
+    "    if re.fullmatch(regex, src):\n",
+    "        return jp(ctx, src)\n",
+    "        \n",
+    "    keys = re.findall(regex, src)\n",
+    "    print(keys)\n",
+    "    for k in keys:\n",
+    "        val = jp(ctx,k,'')\n",
+    "        print(val)\n",
+    "        src = src.replace(k, str(val))\n",
+    "\n",
+    "    return src\n",
+    "\n",
+    "src = 'asdf'\n",
+    "var_replace(src, ctx)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
