--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "['$.addr', '$.id', '$.user.name', '$.user.age']"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,23 +358,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "['$.addr', '$.id', '$.user.name', '$.user.age']\n",
+      "shanghai\n",
+      "33\n",
+      "testname\n",
+      "33\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'asdf'"
+       "'http://aa.com/home/shanghai/33?name=testname&age=33'"
       ]
      },
-     "execution_count": 273,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +396,7 @@
     "    regex = r'(\\$(?:\\.\\w+)*)'\n",
     "    if re.fullmatch(regex, src):\n",
     "        return jp(ctx, src)\n",
-    "        \n",
+    "\n",
     "    keys = re.findall(regex, src)\n",
     "    print(keys)\n",
     "    for k in keys:\n",
@@ -402,8 +406,79 @@
     "\n",
     "    return src\n",
     "\n",
-    "src = 'asdf'\n",
+    "#src = '$.user.name'\n",
     "var_replace(src, ctx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if result as expect\n",
+    "def match(a, b):\n",
+    "    print(type(a), \" \", type(b))\n",
+    "    if type(a) is dict and type(b) is dict:\n",
+    "        keys = set(a.keys()) & set(b.keys())\n",
+    "        res = [a[k]==b[k] for k in keys]\n",
+    "\n",
+    "        print(res)\n",
+    "\n",
+    "        return res.count(False) == 0 if len(res) > 0 else False\n",
+    "    else:\n",
+    "        return a == b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>   <class 'dict'>\n",
+      "[False]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 305,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "a = {'args': {}, 'data': '{\"data\": {\"token\": \"asdf\"}}', 'files': {}, 'form': {}, 'headers': {'Accept': '*/*', 'Accept-Encoding': 'gzip, deflate', 'Content-Length': '27', 'Content-Type': 'application/json', 'Host': 'httpbin.org', 'User-Agent': 'python-requests/2.27.1', 'X-Amzn-Trace-Id': 'Root=1-626f5686-49f22694598bc9b86fa3c180'}, 'json': {'data': {'token': 'asdf'}}, 'origin': '58.247.180.57', 'url': 'https://httpbin.org/post'}\n",
+    "b = {'headers': {'Content-Type': 'application/json'}}\n",
+    "match(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 290,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "None==None"
    ]
   },
   {
